# ECE-6122

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .releaserc.yaml  .yamllint.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  Makefile  README.md  checkmake.ini  conanfile.txt  cppcheck.suppress  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-and-lint.yml  build.yml  dependabot-auto-merge.yml  lint.yml  release.yml
Homework_0/: CMakeLists.txt  Problem1.cpp  Problem1_test.cpp  Problem2.cpp  Problem3.cpp  Problem4.cpp
Homework_1/: CMakeLists.txt  Hw1.cpp  Lab2.cpp  MazeGenerator.cpp  MazeGenerator.h  MazeSolver.cpp  MazeSolver.h  PathfindingNotes.md  README.md  maze_algorithm_explanation.md
Homework_2/: CMakeLists.txt  Geometry.cpp  Geometry.h  Hw2.cpp  RayTracer.cpp  RayTracer.h  Report.cpp  Report.h  Scene.cpp  Scene.h  main.cpp  run_report.sh
Homework_2/data/: avg_ms_by_render_ray_debug.csv  avg_ms_by_render_ray_release.csv  pace_ray_tracing_performance.csv  ray_tracing_performance_2026_03_03.csv
Homework_2/docs/: RAY_LINE_SEGMENT_INTERSECTION.md  RAY_RECTANGLE_INTERSECTION.md
Homework_2/scripts/: header.tex  ray_tracing_performance_analysis.ipynb  report.md  requirements.txt  run_report.sh
